made changes to dashboard css

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -249,7 +249,7 @@ body{
     padding: 30px;
     display: flex;
     justify-content: space-between;
-    cursor: pointer;
+    /* cursor: pointer; */
     border-radius: 20px;
     box-shadow: 0 7px 25px rgba(0,0,0,0.08);
 }
