--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -218,20 +218,11 @@ body{
 
 .user{
     position: relative;
-    width: 50px;
-    height: 40px;
+    width: 100px;
+    /* height: 40px; */
     /* border-radius: 50%; */
     overflow: hidden;
     cursor: pointer;
-}
-
-.user img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .cardBox{
